--- a/templates/search.html
+++ b/templates/search.html
@@ -6,9 +6,9 @@
      </h2>
     <form class="center" action="/show/" method="post">
     <p class="center">BookName</p>
-    <input type="text" name="bookname" autocomplete="off" ><br>
+    <input class = search type="text" name="bookname" autocomplete="off" ><br>
     <p class="center">Author</p>
-    <input type="text" name="author" autocomplete="off" ><br><br>
+    <input class = search type="text" name="author" autocomplete="off" ><br><br>
     <div style="margin: 0 auto">
     <input class="btn" type="submit" name="submit" value="Search">
     </div>
