--- a/templates/base.html
+++ b/templates/base.html
@@ -2,31 +2,63 @@
 <html>
 <head>
     {% block head %}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book inquiries</title>
-    <link rel="icon" href="{{ url_for('static', filename='faviconv.ico') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Book inquiries</title>
+        <link rel="icon" href="{{ url_for('static', filename='faviconv.ico') }}">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+              crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                crossorigin="anonymous"></script>
     {% endblock %}
 </head>
 <body>
 <ul class="back">
-	<li class="li_left"><a class="li_a" href="/">主页</a></li>
-	<li class="li_left"><a class="li_a" href="/searchbook/">查询</a></li>
-	{% if current_user.is_authenticated %}
-    	<li class="li_left"><a class="li_a" href="{{ url_for('logout') }}">登出</a></li>
-    {% else %}
-    	<li class="li_left"><a class="li_a" href="{{ url_for('login') }}">登录</a></li>
-    {% endif %}
+    {#    <li class="li_left"><a class="li_a" href="/">主页</a></li>#}
+    {#    <li class="li_left"><a class="li_a" href="/searchbook/">查询</a></li>#}
+    {#    {% if current_user.is_authenticated %}#}
+    {#        <li class="li_left"><a class="li_a" href="{{ url_for('logout') }}">登出</a></li>#}
+    {#    {% else %}#}
+    {#        <li class="li_left"><a class="li_a" href="{{ url_for('login') }}">登录</a></li>#}
+    {#    {% endif %}#}
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" href="/">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="/searchbook/" role="button"
+               aria-haspopup="true"
+               aria-expanded="false">Search</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="{{ url_for('searchbook') }}">Book</a>
+                <a class="dropdown-item" href="#">Teacher</a>
+                <a class="dropdown-item" href="#">Database</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Space</a>
+            </div>
+        </li>
+        <li class="nav-item">
+            {% if current_user.is_authenticated %}
+                <a class="nav-link" href="/logout">Logout</a>
+            {% else %}
+                <a class="nav-link" href="/login">Login</a>
+            {% endif %}
+        </li>
+    </ul>
 </ul>
 {% for message in get_flashed_messages() %}
     <div class="alert">{{ message }}</div>
 {% endfor %}
-    {% block content %}
-    {% endblock %}
-    <img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/totoro.gif') }}">
-    <footer>
-        <small>&copy; 2019 <a href="https://cn.bing.com/">Bing</a></small>
-    </footer>
+{% block content %}
+{% endblock %}
+<img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/totoro.gif') }}">
 </body>
 <html>
