--- a/templates/search.html
+++ b/templates/search.html
@@ -1,16 +1,31 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2>
-    <img alt="Avatar" class="avatar" src="{{ url_for('static', filename='images/avatar.png') }}">
-     Search Book
-     </h2>
-    <form class="center" action="/show/" method="post">
-    <p class="center">BookName</p>
-    <input class = search type="text" name="bookname" autocomplete="off" ><br>
-    <p class="center">Author</p>
-    <input class = search type="text" name="author" autocomplete="off" ><br><br>
-    <div style="margin: 0 auto">
-    <input class="btn" type="submit" name="submit" value="Search">
-    </div>
-</form>
+    {#    <form class="center" action="/show/" method="post">#}
+    {#    <p class="center">BookName</p>#}
+    {#    <input class = search type="text" name="bookname" autocomplete="off" ><br>#}
+    {#    <p class="center">Author</p>#}
+    {#    <input class = search type="text" name="author" autocomplete="off" ><br><br>#}
+    {#    <div style="margin: 0 auto">#}
+    {#    <input class="btn" type="submit" name="submit" value="Search">#}
+    {#    </div>#}
+    {#</form>#}
+    <form method="post">
+        <div class="form-group row">
+            <label for="exampleInputEmail1" class="col-sm-1 col-form-label">BookName</label>
+            <div class="col-sm-5">
+                <input type="text" class="form-control" name="bookname" placeholder="Enter Username">
+                <small id="emailHelp" class="form-text text-muted">please write in the book that you want to search.
+                </small>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputPassword" class="col-sm-1 col-form-label">Author</label>
+            <div class="col-sm-5">
+                <input type="text" class="form-control" name="author" placeholder="Password">
+                <small id="emailHelp" class="form-text text-muted">please write in the author that you want to search.
+                </small>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary" value="Search">Submit</button>
+    </form>
 {% endblock %}
