--- a/templates/login.html
+++ b/templates/login.html
@@ -7,22 +7,25 @@
     {#    <!-- 密码输入框的 type 属性使用 password，会将输入值显示为圆点 -->#}
     {#    <input type="password" name="password" required><br><br>#}
     {#    <input type="submit" name="submit" value="Submit">#}
-    <form method="post">
+    <form method="post" style="margin:150px 400px; height: 100%;">
         <div class="form-group row">
-            <label for="exampleInputEmail1" class="col-sm-1 col-form-label">Email address</label>
-            <div class="col-sm-5">
+            <label for="exampleInputEmail1" class="col-sm-2 col-form-label">User Name</label>
+            <div class="col-sm-10">
                 <input type="text" class="form-control" name="username" placeholder="Enter Username">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.
+                <small id="emailHelp" class="form-text text-muted">We'll never share your information with anyone
+                    else.
                 </small>
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputPassword" class="col-sm-1 col-form-label">Password</label>
-            <div class="col-sm-5">
+            <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+            <div class="col-sm-10">
                 <input type="password" class="form-control" name="password" placeholder="Password">
             </div>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" style="width:100%">Submit</button>
     </form>
+    <style>
+    </style>
 {% endblock %}
-</form>
+
