--- a/templates/base.html
+++ b/templates/base.html
@@ -21,44 +21,42 @@
     {% endblock %}
 </head>
 <body>
-<ul class="back">
-    {#    <li class="li_left"><a class="li_a" href="/">主页</a></li>#}
-    {#    <li class="li_left"><a class="li_a" href="/searchbook/">查询</a></li>#}
-    {#    {% if current_user.is_authenticated %}#}
-    {#        <li class="li_left"><a class="li_a" href="{{ url_for('logout') }}">登出</a></li>#}
-    {#    {% else %}#}
-    {#        <li class="li_left"><a class="li_a" href="{{ url_for('login') }}">登录</a></li>#}
-    {#    {% endif %}#}
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link active" href="/">Home</a>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="/searchbook/" role="button"
-               aria-haspopup="true"
-               aria-expanded="false">Search</a>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="{{ url_for('searchbook') }}">Book</a>
-                <a class="dropdown-item" href="#">Teacher</a>
-                <a class="dropdown-item" href="#">Database</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Space</a>
-            </div>
-        </li>
-        <li class="nav-item">
-            {% if current_user.is_authenticated %}
-                <a class="nav-link" href="/logout">Logout</a>
-            {% else %}
-                <a class="nav-link" href="/login">Login</a>
-            {% endif %}
-        </li>
-    </ul>
-</ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand">Library</a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="/searchbook" id="navbarDropdown" role="button"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Search
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ url_for('searchbook') }}">Book</a>
+                    <a class="dropdown-item" href="#">Teacher</a>
+                    <a class="dropdown-item" href="#">Database</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Null</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                {% if current_user.is_authenticated %}
+                    <a class="nav-link mr-1" href="/logout">Logout</a>
+                {% else %}
+                    <a class="nav-link mr-1" href="/login">Login</a>
+                {% endif %}
+            </li>
+        </ul>
+    </div>
+</nav>
 {% for message in get_flashed_messages() %}
-    <div class="alert">{{ message }}</div>
+    <div class="alert alert-primary" role="alert">
+        {{ message }}
+    </div>
 {% endfor %}
 {% block content %}
 {% endblock %}
-<img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/totoro.gif') }}">
 </body>
 <html>
