--- a/templates/search.html
+++ b/templates/search.html
@@ -9,23 +9,23 @@
     {#    <input class="btn" type="submit" name="submit" value="Search">#}
     {#    </div>#}
     {#</form>#}
-    <form method="post">
+    <form action="/show/" method="post" style="margin:150px 400px; height: 100%;" >
         <div class="form-group row">
-            <label for="exampleInputEmail1" class="col-sm-1 col-form-label">BookName</label>
-            <div class="col-sm-5">
+            <label for="exampleInputEmail1" class="col-sm-2 col-form-label">BookName</label>
+            <div class="col-sm-10">
                 <input type="text" class="form-control" name="bookname" placeholder="Enter Username">
                 <small id="emailHelp" class="form-text text-muted">please write in the book that you want to search.
                 </small>
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputPassword" class="col-sm-1 col-form-label">Author</label>
-            <div class="col-sm-5">
+            <label for="inputPassword" class="col-sm-2 col-form-label">Author</label>
+            <div class="col-sm-10">
                 <input type="text" class="form-control" name="author" placeholder="Password">
                 <small id="emailHelp" class="form-text text-muted">please write in the author that you want to search.
                 </small>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary" value="Search">Submit</button>
+        <button type="submit" class="btn btn-primary" value="Search" style="width: 100%;">Submit</button>
     </form>
 {% endblock %}
