--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
     <p >{{ movies|length }} Titles</p>
     <ul class="list-group">
         {% for movie in movies %}  {# 迭代 movies 变量 #}
-        <li class="list-group-item" style="text-align: center">{{ movie.title }} - {{ movie.year }}</li>  {# 等同于 movie['title'] #}
+        <li class="list-group-item " style="margin-left:280px;text-align: center;width: 800px;">{{ movie.title }} - {{ movie.year }}</li>  {# 等同于 movie['title'] #}
         {% endfor %}  {# 使用 endfor 标签结束 for 语句 #}
         {% for i in res %}
-        <li class="list-group-item " style="text-align: center">{{ i }}</li>
+        <li class="list-group-item " style="margin-left:280px; text-align: center;width: 800px;">{{ i }}</li>
         {% endfor %}
     </ul>
 {% endblock %}
