修改搜索框的默认文本

--- a/templates/search.html
+++ b/templates/search.html
@@ -13,7 +13,7 @@
         <div class="form-group row">
             <label for="exampleInputEmail1" class="col-sm-1 col-form-label"><i class="zi zi_book" zico="书籍"></i></label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="bookname" placeholder="Enter Username">
+                <input type="text" class="form-control" name="bookname" placeholder="Enter Bookname">
                 <small id="emailHelp" class="form-text text-muted">please write in the book that you want to search.
                 </small>
             </div>
@@ -21,7 +21,7 @@
         <div class="form-group row">
             <label for="inputPassword" class="col-sm-1 col-form-label"><i class="zi zi_useredit" zico="用户编辑"></i></label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="author" placeholder="Password">
+                <input type="text" class="form-control" name="author" placeholder="Author">
                 <small id="emailHelp" class="form-text text-muted">please write in the author that you want to search.
                 </small>
             </div>
