--- a/templates/base.html
+++ b/templates/base.html
@@ -21,52 +21,116 @@
                 crossorigin="anonymous"></script>
     {% endblock %}
 </head>
-<body>
-<div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand">Library</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="/searchbook" id="navbarDropdown" role="button"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Search
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{{ url_for('searchbook') }}">Book</a>
-                        <a class="dropdown-item" href="/searchteacher/">Teacher</a>
-                        <a class="dropdown-item" href="/searchdatabase/">Database</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Null</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    {% if current_user.is_authenticated %}
-                        <a class="nav-link mr-1" href="/logout">Logout</a>
-                    {% else %}
-                        <a class="nav-link mr-1" href="/login">Login</a>
-                    {% endif %}
-                </li>
-            </ul>
+<body style=>
+<div class="container-fluid px-0 bg-light" style="height: 100%;min-width: 400px">
+    <div class="pos-f-t px-0">
+        <div class="collapse " id="navbarToggleExternalContent">
+            <div class="bg-dark p-4">
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="/searchbook" id="navbarDropdown" role="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Search
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{{ url_for('searchbook') }}">Book</a>
+                            <a class="dropdown-item" href="/searchteacher/">Teacher</a>
+                            <a class="dropdown-item" href="/searchdatabase/">Database</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Null</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Disabled</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </nav>
-    {% for message in get_flashed_messages() %}
-        <div class="alert alert-primary" role="alert" style="position: fixed;top: 60px;width: 180%">
-            {{ message }}
-        </div>
-    {% endfor %}
-    {% block content %}
-    {% endblock %}
-</div>
+        <nav class="navbar  navbar-dark bg-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
+            <a class="navbar-brand col text-light">
+                Library
+            </a>
+
+
+            {#            <div class="navbar-nav col text-right">#}
+            {#                <ul class="navbar-nav">#}
+            {#                    <li class="nav-item active">#}
+            {#                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>#}
+            {#                    </li>#}
+            {#                    <li class="nav-item dropdown">#}
+            {#                        <a class="nav-link dropdown-toggle" href="/searchbook" id="navbarDropdown" role="button"#}
+            {#                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
+            {#                            Search#}
+            {#                        </a>#}
+            {#                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">#}
+            {#                            <a class="dropdown-item" href="{{ url_for('searchbook') }}">Book</a>#}
+            {#                            <a class="dropdown-item" href="/searchteacher/">Teacher</a>#}
+            {#                            <a class="dropdown-item" href="/searchdatabase/">Database</a>#}
+            {#                            <div class="dropdown-divider"></div>#}
+            {#                            <a class="dropdown-item" href="#">Null</a>#}
+            {#                        </div>#}
+            {#                    </li>#}
+            {#                    <li class="nav-item">#}
+
+
+
+            {% if current_user.is_authenticated %}
+                <a class=" nav-link text-right " href="/logout">Logout <i class="zi zi_forRight"
+                                                                          zico="右指"></i></a>
+            {% else %}
+                <a class="nav-link text-right " href="/login">Login <i class="zi zi_forUp" zico="上指"></i></a>
+            {% endif %}
+            {#                </li>#}
+            {#            </ul>#}
+            {#        </div>#}
+
+        </nav>
+    </div>
+</div>
+{#    <nav class="navbar navbar-expand navbar-light bg-dark row justify-content-around ">#}
+
+{#    </nav>#}
+{% for message in get_flashed_messages() %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert"
+         style="position: absolute;top:0;left:0">
+        <strong>
+            {{ message }}
+        </strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+{% endfor %}
+
+
+{#    {% for message in get_flashed_messages() %}#}
+{#        <div class="alert alert-primary" role="alert" style="position: fixed;top: 60px;width: 180%">#}
+{#            {{ message }}#}
+{#        </div>#}
+{#    {% endfor %}#}
+{% block content %}
+{% endblock %}
 </body>
 <html>
 <style>
+    * {
+        box-sizing: content-box;
+    }
+
     body {
-         font-family-sans-serif: {#// Safari for OS X and iOS (San Francisco)#} -apple-system,
+        font-family-sans-serif: {#// Safari for OS X and iOS (San Francisco)#} -apple-system,
   {#// Chrome < 56 for OS X (San Francisco)#}
   BlinkMacSystemFont,
   {#// Windows#}
@@ -77,5 +141,6 @@
   "Helvetica Neue", Arial, sans-serif,
   {#// Emoji fonts#}
   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", default;
+        box-sizing: border-box;
     }
 </style>
