--- a/templates/login.html
+++ b/templates/login.html
@@ -1,30 +1,84 @@
-{% extends 'base.html' %}
-{% block content %}
-    {#<form method="post" class="center">#}
-    {#    Username<br>#}
-    {#    <input type="text" name="username" required><br><br>#}
-    {#    Password<br>#}
-    {#    <!-- 密码输入框的 type 属性使用 password，会将输入值显示为圆点 -->#}
-    {#    <input type="password" name="password" required><br><br>#}
-    {#    <input type="submit" name="submit" value="Submit">#}
-    <form method="post" style="margin:150px 400px; height: 100%;">
-        <div class="form-group row">
-            <label for="exampleInputEmail1" class="col-sm-1 col-form-label"> <i class="zi zi_usercircle"
-                                                                                zico="用户圆标"></i></label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="username" placeholder="Enter Username">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your information with anyone
-                    else.
-                </small>
-            </div>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://ico.z01.com/zico.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+</head>
+<title>
+    login
+</title>
+<body>
+<div class="container-fluid bg-light text-dark " style="height:100%;">
+
+    <div class="row justify-content-center" style="height: 100%">
+        <div class="col-10 align-self-center">
+            <blockquote class="blockquote text-center">
+                <p class="mb-0">Please Log in</p>
+            </blockquote>
+            <form method="post">
+                <div class="form-group row">
+                    <label class="form-label col-2">
+                        <i class="zi zi_usercircle" zico="用户圆标"></i>
+                    </label>
+                    <div class="input-group-lg col-10">
+                        <input type="text" class="form-control  " name="username"
+                               placeholder="Username">
+                    </div>
+
+                    <label class="label col-2">
+                        <i class="zi zi_lock" zico="锁定"></i>
+                    </label>
+                    <div class="input-group-lg col-10">
+                        <input type="Password" class="form-control " name="password" placeholder="Password">
+                    </div>
+
+                </div>
+                <button type="submit" class="btn btn-primary btn-lg" style="width:100%">Login</button>
+            </form>
         </div>
-        <div class="form-group row">
-            <label for="inputPassword" class="col-sm-1 col-form-label"><i class="zi zi_lock" zico="锁定"></i></label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" name="password" placeholder="Password">
-            </div>
-        </div>
-        <button type="submit" class="btn btn-primary" style="width:92%">Submit</button>
-    </form>
-{% endblock %}
+    </div>
+</div>
+{% for message in get_flashed_messages() %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert" style="position: absolute;top:0;left:100px">
+        <strong>
+            {{ message }}
+        </strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+{% endfor %}
+</body>
+</html>
+
+{#    <form method="post" style="margin:150px 400px; height: 100%;">#}
+{#        <div class="form-group row">#}
+{#            <label for="exampleInputEmail1" class="col-sm-1 col-form-label"> <i class="zi zi_usercircle"#}
+{#                                                                                zico="用户圆标"></i></label>#}
+{#            <div class="col-sm-10">#}
+{#                <input type="text" class="form-control" name="username" placeholder="Enter Username">#}
+{#                <small id="emailHelp" class="form-text text-muted">We'll never share your information with anyone#}
+{#                    else.#}
+{#                </small>#}
+{#            </div>#}
+{#        </div>#}
+{#        <div class="form-group row">#}
+{#            <label for="inputPassword" class="col-sm-1 col-form-label"><i class="zi zi_lock" zico="锁定"></i></label>#}
+{#            <div class="col-sm-10">#}
+{#                <input type="password" class="form-control" name="password" placeholder="Password">#}
+{#            </div>#}
+{#        </div>#}
+{#        <button type="submit" class="btn btn-primary" style="width:92%">Submit</button>#}
+{#    </form>#}
 
