--- a/templates/searchBook.html
+++ b/templates/searchBook.html
@@ -9,24 +9,28 @@
     {#    <input class="btn" type="submit" name="submit" value="Search">#}
     {#    </div>#}
     {#</form>#}
-    <form action="/showbook/" method="post" style="margin:150px 400px; height: 100%;">
+    <form action="/showbook/" method="post" class="px-4">
         <div class="form-group row">
-            <label for="exampleInputEmail1" class="col-sm-1 col-form-label"><i class="zi zi_book" zico="书籍"></i></label>
-            <div class="col-sm-10">
+            <label for="exampleInputEmail1" class="col-2 col-form-label"><i class="zi zi_book"
+                                                                            zico="书籍"></i></label>
+            <div class="col-10">
                 <input type="text" class="form-control" name="bookname" placeholder="Enter Bookname">
                 <small id="emailHelp" class="form-text text-muted">please write in the book that you want to search.
                 </small>
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputPassword" class="col-sm-1 col-form-label"><i class="zi zi_useredit" zico="用户编辑"></i></label>
-            <div class="col-sm-10">
+            <label for="inputPassword" class="col-2 col-form-label"><i class="zi zi_useredit"
+                                                                       zico="用户编辑"></i></label>
+            <div class="col-10">
                 <input type="text" class="form-control" name="author" placeholder="Author">
-                <small id="emailHelp" class="form-text text-muted">please write in the author that you want to search.
+                <small id="emailHelp" class="form-text text-muted">please write in the author that you want to
+                    search.
                 </small>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary" value="Search" style="width: 92%;"><i class="zi zi_searchBlack"
-                                                                                            zico="搜索粗黑"></i></button>
+        <button type="submit" class="btn btn-primary" value="Search" style="width: 92%;">
+            <i class="zi zi_searchBlack" zico="搜索粗黑"></i>
+        </button>
     </form>
 {% endblock %}
