--- a/templates/searchTeacher.html
+++ b/templates/searchTeacher.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-    <form action="/showteacher/" method="post" style="margin:150px 400px; height: 100%;">
-        <div class="form-group row">
-            <label for="InputDataBase" class="col-sm-1 col-form-label"><i class="zi zi_chalkboardteacher"
+    <form action="/showteacher/" method="post">
+        <div class="form-group">
+            <label for="InputDataBase" class="col-1 col-form-label"><i class="zi zi_chalkboardteacher"
                                                                           zico="老师黑板"></i>
             </label>
-            <div class="col-sm-10">
+            <div class="col-10">
                 <input type="text" class="form-control" name="teachername"
                        placeholder="Enter TeacherName">
                 <small class="form-text text-muted">please write in the name of teacher that you want to search.
