--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
                 </ul>
             </div>
         </div>
-        <nav class="navbar  navbar-dark bg-dark">
+        <nav class="navbar  navbar-dark bg-dark sticky-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
                     aria-expanded="false" aria-label="Toggle navigation">
